# UTEngine

./: .gitignore  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Dependencies/glad/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
Engine/Core/: Application.cpp  Application.hpp  DependencyManager.cpp  DependencyManager.hpp  EngineDependency.cpp  EngineDependency.hpp
Engine/Debug/: Assert.hpp  DebugLog.cpp  DebugLog.hpp
Engine/Dependencies/: GLFWDependency.cpp  GLFWDependency.hpp
Engine/Math/: TimeSpan.hpp
Engine/Platform/: ApplicationWindow.cpp  ApplicationWindow.hpp  Executable.cpp  Executable.hpp  FileSystem.cpp  FileSystem.hpp  WindowManager.cpp  WindowManager.hpp
Engine/Rendering/: RenderManager.cpp  RenderManager.hpp  RenderingAPI.hpp  VertexLayout.cpp  VertexLayout.hpp
Engine/Rendering/OpenGL/: OGLDataTypes.cpp  OGLDataTypes.hpp  OGLRenderingAPI.cpp  OGLRenderingAPI.hpp
Testing/: CMakeLists.txt  SandboxApp.cpp  SandboxApp.hpp  main.cpp
